--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "koa": "^2.11.0",
     "koa-router": "^7.4.0",
     "level": "^6.0.0",
+    "log4js": "^6.1.0",
     "lru-cache": "^5.1.1"
   },
   "devDependencies": {
